# study

./: .gitignore
aicode/mslang-c/: .clang-format  .editorconfig  .gitattributes  CLAUDE.md  CMakeLists.txt
aicode/mslang-c/.githooks/: pre-commit
aicode/mslang-c/benchmarks/: CMakeLists.txt  README.md  baseline.json  gen_baseline.py  run_all.py
aicode/mslang-c/benchmarks/cases/: arith_loop.ms  binary_trees_alloc.ms  closure_counter.ms  fib_iterative.ms  fib_recursive.ms  generator_yield.ms  list_grow_iter.ms  map_insert_lookup.ms  method_dispatch.ms  quickening_deopt.ms  shape_mono_field.ms  shape_poly_field.ms  string_interp_loop.ms
aicode/mslang-c/benchmarks/results/: 20260506-2304.md  20260506-2309.md  20260506-2315.md  20260506-2316.md  20260510-0046.md  20260510-0105.md  20260510-0116.md  20260510-0139.md  20260510-0143.md  20260510-0146.md  20260510-0301.md  20260510-0302.md  20260510-0303.md  20260510-0304.md  20260510-0306.md  20260510-0308.md  20260510-0314.md  20260510-0321.md  20260510-0322.md  20260510-0323.md  20260510-1648.md  20260510-1649.md
aicode/mslang-c/build_clang/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
aicode/mslang-c/build_clang/tests/: CTestTestfile.cmake  cmake_install.cmake
aicode/mslang-c/build_stats/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ms_chunk.vcxproj  ms_chunk.vcxproj.filters  ms_debug.vcxproj  ms_debug.vcxproj.filters  ms_frontend.vcxproj  ms_frontend.vcxproj.filters  ms_memory.vcxproj  ms_memory.vcxproj.filters  ms_object.vcxproj  ms_object.vcxproj.filters  ms_optimize.vcxproj  ms_optimize.vcxproj.filters  ms_scanner.vcxproj  ms_scanner.vcxproj.filters  ms_serializer.vcxproj  ms_serializer.vcxproj.filters  ms_support.vcxproj  ms_support.vcxproj.filters  ms_table.vcxproj  ms_table.vcxproj.filters  ms_vm.vcxproj  ms_vm.vcxproj.filters  ms_vtable.vcxproj  ms_vtable.vcxproj.filters  mslang-c.sln  mslang-c.vcxproj  mslang-c.vcxproj.filters
aicode/mslang-c/build_stats/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_base_objects.vcxproj  test_base_objects.vcxproj.filters  test_builtins.vcxproj  test_builtins.vcxproj.filters  test_chunk.vcxproj  test_chunk.vcxproj.filters  test_collections.vcxproj  test_collections.vcxproj.filters  test_compiler_expr.vcxproj  test_compiler_expr.vcxproj.filters  test_compiler_stmts.vcxproj  test_compiler_stmts.vcxproj.filters  test_compiler_vars.vcxproj  test_compiler_vars.vcxproj.filters  test_coroutines.vcxproj  test_coroutines.vcxproj.filters  test_debug.vcxproj  test_debug.vcxproj.filters  test_exceptions.vcxproj  test_exceptions.vcxproj.filters  test_gc.vcxproj  test_gc.vcxproj.filters  test_gc_gen.vcxproj  test_gc_gen.vcxproj.filters  test_interp_exec.vcxproj  test_interp_exec.vcxproj.filters  test_modules.vcxproj  test_modules.vcxproj.filters  test_natives.vcxproj  test_natives.vcxproj.filters  test_object_string.vcxproj  test_object_string.vcxproj.filters  test_oop.vcxproj  test_oop.vcxproj.filters  test_oop_inherit.vcxproj  test_oop_inherit.vcxproj.filters  (+24 more)
aicode/mslang-c/cmake/: MslangTesting.cmake  run_fixture.cmake
aicode/mslang-c/docs/: BENCHMARK.md  PLAN.md  T01-project-skeleton.md  T02-value-system.md  T03-hash-table.md  T04-object-strings.md  T05-base-objects.md  T06-chunk-instructions.md  T07-disassembler.md  T08-scanner-basics.md  T09-scanner-advanced.md  T10-compiler-expressions.md  T11-compiler-variables.md  T12-compiler-statements.md  T13-vm-basic-execution.md  T14-vm-closures-upvalues.md  T15-vm-control-flow.md  T16-gc-mark-sweep.md  T17-gc-generational.md  T18-oop-classes-instances.md  T19-oop-inheritance.md  T20-oop-shapes-ic.md  T21-collections-list-map-tuple.md  T22-builtin-methods.md  T23-string-interpolation-exec.md  T24-exceptions-defer.md  T25-coroutines.md  T26-modules.md  T27-native-functions.md  T28-peephole-optimizer.md  T29-quickening.md  T30-serializer-incremental-gc.md  TASKS.md
aicode/mslang-c/docs/language/: PLAN.md  T02-value-system.md  T04-object-strings.md  T06-chunk-instructions.md  T09-scanner-advanced.md  T13-vm-basic-execution.md  T14-vm-closures-upvalues.md  T15-vm-control-flow.md  T18-oop-classes-instances.md  T23-string-interpolation-exec.md  T24-exceptions-defer.md  T25-coroutines.md  T29-quickening.md  T30-serializer-incremental-gc.md  TASKS.md
aicode/mslang-c/docs/mscache/: MSCACHE-DESIGN.md  README.md  T01-fs-util.md  T02-header-v2-cache-path.md  T03-mtime-fast-path.md  T04-hash-mode.md  T05-cli-default-on.md  T06-module-cache.md
aicode/mslang-c/docs/tools/: formatter.md
aicode/mslang-c/include/ms/: chunk.h  common.h  compiler.h  consts.h  debug.h  event_loop.h  fs_util.h  memory.h  module.h  object.h  opcode.h  optimize.h  reactor.h  scanner.h  serializer.h  shape.h  stdlib_register.h  table.h  table_types.h  token.h  value.h  value_nan.h  vm.h  vtable.h
aicode/mslang-c/scripts/: run_fixtures.py
aicode/mslang-c/src/: chunk.c  compiler.c  compiler_expr.c  compiler_impl.h  debug.c  event_loop.c  fs_util.c  main.c  memory.c  module.c  module_loader.c  object.c  optimize.c  reactor_epoll.c  reactor_iocp.c  reactor_kqueue.c  scanner.c  serializer.c  shape.c  stdlib_register.c  table.c  value.c  vm.c  vm_builtins.c  vm_call.c  vm_gc.c  vm_natives.c  vtable.c
aicode/mslang-c/tests/: CMakeLists.txt  test_assert.h
aicode/mslang-c/tests/fixtures/: arithmetic.ms  async_await_resolved.ms  async_basic.ms  async_chain.ms  async_gather.ms  async_gather_empty.ms  bitwise.ms  (+51 more)
aicode/mslang-c/tools/: format_watch.py  formatter.py  requirements.txt
aicode/mslang4/tests/: CMakeLists.txt
aicode/mslangx-c/tests/: CMakeLists.txt  check_mslangc_cache_policy.cmake  check_mslangc_direct_cache.cmake  check_mslangc_import_cache.cmake  check_mslangc_run.cmake  containers_e2e_runner.c  run_all_ms_scripts.py  run_gc_modules.ps1  run_gc_stress.ps1  test_run_all_ms_scripts.py  test_run_ms_examples.py
(+710 files in other folders)
